<resources>
    <string name="app_name">Veterinary Clinic</string>
    <string name="motivo">Reason:</string>
    <string name="mascota">Pet:</string>
    <string name="fecha">Date:</string>
    <string name="hora">Time:</string>
    <string name="mis_citas">My dates</string>
    <string name="pedir_cita">Ask for a date</string>
    <string name="modificar_cita">Modify date</string>
    <string name="lista">Date list</string>
    <string name="salir">Exit</string>
    <string name="cerrar_sesion">Sign off</string>
    <string name="clave">Password:</string>
    <string name="nueva_clave">New password:</string>
    <string name="consulta_id">Check your ID</string>
    <string name="escribe_id">Write your ID and press ENTER</string>
    <string name="campo_vacio">You have left the field blank</string>
    <string name="campo_blanco">You cannot leave fields blank</string>
    <string name="tu_id_es">Your ID is</string>
    <string name="tu_id_es_incorrecto">The DNI entered is wrong</string>
    <string name="tu_id_clave_es_incorrecto">The DNI or password is wrong</string>
    <string name="clave_modificada">the password has been modified</string>
    <string name="afirmacion">Yes</string>
    <string name="pregunta_salir">Do you want to exit the application?</string>
    <string name="salir_cancelada">Exit option canceled</string>
    <string name="no_atras">cannot go back from this screen</string>
    <string name="esta_en_listado_citas">You are already in the date list</string>
    <string name="salir_titulo">EXIT APPLICATION</string>
    <string name="cita_pasada">You cannot cancel an date, it has already ended</string>
    <string name="cita_anulada">Canceled date</string>
    <string name="opcion_anular_cita_cancelada">Option to cancel canceled date</string>
    <string name="pregunta_anular_cita">Do you want to cancel the date?</string>
    <string name="anular_cita">CANCEL DATE</string>
    <string name="fecha_mayor">You have to choose a date after today</string>
    <string name="fecha_no_disponible">The chosen date and time are not available</string>
    <string name="no_mascota">You dont have pets with that name</string>
    <string name="cita_concertada">Date set for the day:</string>
    <string name="tienes_cita">You have a pending date</string>
    <string name="cita_modificada">Cita modificada para el día:</string>
    <string name="cambios">Changes made</string>
</resources>