<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:theme="@style/Theme.ClinicaVeterinaria"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.ClinicaVeterinaria">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Clinica veterinaria"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iniciarSesion"
                android:layout_width="70dp"
                android:layout_height="57dp"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:translationX="0dp"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <ImageView
                android:id="@+id/modificar"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:translationX="-13dp"
                app:srcCompat="@drawable/ic_baseline_mode_edit_24" />

            <ImageView
                android:id="@+id/imgSalir"
                android:layout_width="70dp"
                android:layout_height="57dp"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:translationX="-25dp"
                app:srcCompat="@drawable/ic_baseline_power_settings_new_24" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/acceder"
        android:layout_width="67dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNuevaClave"
        app:srcCompat="@android:drawable/ic_menu_set_as" />

    <TextView
        android:id="@+id/lblId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="140dp"
        android:text="ID:"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/clave"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lblId"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lblId"
        app:layout_constraintTop_toBottomOf="@+id/lblId" />

    <EditText
        android:id="@+id/txtclave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lblClave"
        app:layout_constraintTop_toBottomOf="@+id/lblClave" />

    <TextView
        android:id="@+id/consultarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/consulta_id"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceder" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consultarId" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="345dp"
        android:layout_height="322dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/isotipo" />

    <TextView
        android:id="@+id/lblNuevaClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nueva_clave"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lblClave"
        app:layout_constraintTop_toBottomOf="@+id/txtclave" />

    <EditText
        android:id="@+id/txtNuevaClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/lblNuevaClave"
        app:layout_constraintTop_toBottomOf="@+id/lblNuevaClave" />
</androidx.constraintlayout.widget.ConstraintLayout>